--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,49 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>User Dashboard</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>ZeroTrust Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-    <div class="dashboard-container">
-        <header>
-            <h1>Welcome to the Dashboard</h1>
-            <p id="walletDisplay"></p>
-            <button onclick="logout()">Logout</button>
-        </header>
-        <main>
-            <section class="card">
-                <h2>Status</h2>
-                <p>✅ Authenticated via Blockchain</p>
-            </section>
-            <section class="card">
-                <h2>Session</h2>
-                <p>Zero Trust session will expire in 90 seconds.</p>
-            </section>
-        </main>
-    </div>
+<body class="dashboard-page">
+    <header>
+        <h2>Welcome to ZeroTrust Dashboard</h2>
+        <p id="userAddress"></p>
+        <button id="logoutBtn">Logout</button>
+    </header>
 
-    <script>
-        const wallet = localStorage.getItem("wallet");
-        if (!wallet) window.location.href = "/";
-        document.getElementById("walletDisplay").textContent = `Wallet: ${wallet}`;
+    <main class="dashboard-grid">
+        <div class="card">📡 Device Access Logs</div>
+        <div class="card">🔍 Authentication Status</div>
+        <div class="card">🛡️ Role-Based Access</div>
+        <div class="card">📊 Usage Analytics</div>
+    </main>
 
-        function logout() {
-            localStorage.clear();
-            window.location.href = "/";
-        }
-
-        setTimeout(() => {
-            alert("Re-authentication via MetaMask required.");
-            window.location.href = "/";
-        }, 30000);
-
-        setTimeout(() => {
-            alert("Full authentication required.");
-            window.location.href = "/";
-        }, 90000);
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/web3@1.10.0/dist/web3.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
